[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/BoardSection.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Board.gd" type="Script" id=2]

[node name="Board" type="Node"]
script = ExtResource( 2 )

[node name="Sections" type="Node2D" parent="."]

[node name="BoardSection" parent="Sections" instance=ExtResource( 1 )]
position = Vector2( 512, 256 )

[node name="BoardSection2" parent="Sections" instance=ExtResource( 1 )]
position = Vector2( 640, 256 )

[node name="BoardSection3" parent="Sections" instance=ExtResource( 1 )]
position = Vector2( 768, 256 )

[node name="BoardSection4" parent="Sections" instance=ExtResource( 1 )]
position = Vector2( 512, 384 )

[node name="BoardSection5" parent="Sections" instance=ExtResource( 1 )]
position = Vector2( 640, 384 )

[node name="BoardSection6" parent="Sections" instance=ExtResource( 1 )]
position = Vector2( 768, 384 )

[node name="BoardSection7" parent="Sections" instance=ExtResource( 1 )]
position = Vector2( 512, 512 )

[node name="BoardSection8" parent="Sections" instance=ExtResource( 1 )]
position = Vector2( 640, 512 )

[node name="BoardSection9" parent="Sections" instance=ExtResource( 1 )]
position = Vector2( 768, 512 )

[node name="PlayerTurnLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 128.0
text = "Player X Turn"
align = 1
valign = 1

[node name="WinnerLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -80.0
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 1104.0
margin_top = 624.0
margin_right = 1232.0
margin_bottom = 672.0
text = "Try Again"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
